# HADSoftware

./: ._CMakeLists.txt  ._README.md  ._README_GUI.txt  ._config  ._file.py  ._final06.py  ._heartbeat_gui.py  ._setup.py  CMakeLists.txt  InputFileParser.hpp  README.md  README_GUI.txt  config  file.py  final06.py  guiPaths.py  heartbeat_gui.py
doc/: IPM_SineCalculation_CSV-Export-Macro.xlsm
doc/EPOS_Linux_Library/: ._install.sh
doc/EPOS_Linux_Library/examples/HelloEposCmd/: ._HelloEposCmd.cpp  ._Makefile
doc/EPOS_Linux_Library/misc/: ._99-epos4.rules  ._99-ftdi.rules
include/: ._Definitions.h
source/: CMakeLists.txt
source/Doc/: Makefile
source/Doc/tkinter/: tkinterTest.py
source/Solver/: Factory.hpp
src/: .HeartrateController.hpp.swp  ._CMakeLists.txt  ._CommandLineParser.hpp  ._Engine.hpp  ._Factory.hpp  ._GUIThreadParser.hpp  ._HADController.hpp  ._HeartrateController.hpp  ._InputFileParser.hpp  ._InputParser.hpp  ._InteractiveParser.hpp  ._InterpolatedPositionMode.hpp  ._MotionMode.hpp  ._ProfileMode.hpp  ._ProfileVelocityMode.hpp  ._data  ._main.cpp  CMakeLists.txt  CommandLineParser.hpp  Engine.cpp  Engine.hpp  EngineOld.cpp  Factory.hpp  GUIThreadParser.hpp  HADController.hpp  HeartrateController.hpp  HelloEposCmd.cpp  InputFileParser.hpp  InputParser.hpp  InteractiveMode.hpp  InteractiveParser.hpp  InterpolatedPositionMode.hpp  MotionMode.hpp  ProfileMode.hpp  ProfilePositionMode.hpp  ProfileVelocityMode.hpp  data  main.cpp
src/Doc/tkinter/: tkinterZinsrechnung
src/Solver/: HADController.hpp
src/gui/: ._CMakeLists.txt  ._README_GUI.txt  ._file.py  ._heartbeat_gui.py  ._setup.py  file.py  heartbeat_gui.py  setup.py
